fix large image overlap in the page images

--- a/css-build/gallery.less
+++ b/css-build/gallery.less
@@ -62,4 +62,9 @@
     margin: 2px 0;
   }
 
+  .cycle-slideshow {
+    left: 51px;
+    top: 10px;
+  }
+
 }
